map backend data to table.

--- a/reactDataApp/public/index.html
+++ b/reactDataApp/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest"  crossorigin="use-credentials" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <title>React App</title>
   </head>
